--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -459,35 +459,43 @@ library(dplyr)
 lf <- read.csv("lionfish9models.csv")
 lf <- lf %>% mutate(MatMod = rep(c("FAS", "SAS", "AAS"), 3),
                     FertSurv = c(rep(TRUE, 6), rep(FALSE, 3)),
-                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)))
+                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)),
+                    Population = "Lionfish")
 lf$MatMod <- factor(lf$MatMod, levels=c("AAS", "SAS", "FAS"))
 
 aN <- read.csv("alligatorNorth.csv")
 aN <- aN %>% mutate(MatMod = rep(c("FAS", "SAS", "AAS"), 3),
                     FertSurv = c(rep(TRUE, 6), rep(FALSE, 3)),
-                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)))
+                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)),
+                    Population = "Alligator North")
 aN$MatMod <- factor(aN$MatMod, levels=c("AAS", "SAS", "FAS"))
 
 aS <- read.csv("alligatorSouth.csv")
 aS <- aS %>% mutate(MatMod = rep(c("FAS", "SAS", "AAS"), 3),
                     FertSurv = c(rep(TRUE, 6), rep(FALSE, 3)),
-                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)))
+                    JuvRep = c(rep(TRUE, 3), rep(FALSE, 6)),
+                    Population = "Alligator South")
 aS$MatMod <- factor(aS$MatMod, levels=c("AAS", "SAS", "FAS"))
+alldata <- rbind(lf[,-(2:17)], aN[,-(2:21)], aS[,-(2:21)])
+alldata$Population <- factor(alldata$Population, 
+                             levels=c("Lionfish", "Alligator South",
+                                      "Alligator North"))
 ```
 
-```{r lamfig, fig.cap='Asymptotic growth rate ($\\lambda_1$) for various prebreeding census MPMs of the lionfish population.  Factors varied include three maturation models (AAS, SAS, FAS), the presence (squares) or absence (circles) of reproduction by maturing juveniles, and the presence (open symbols) or absence (filled symbols)  of adult survival included in the fertility coefficient.  The correct model is the open square with the AAS maturation model.'}
+```{r lamfig, fig.cap='Asymptotic growth rate ($\\lambda_1$) for various prebreeding census MPMs of the lionfish and alligator populations.  Factors varied include three maturation models (AAS, SAS, FAS), the presence (squares) or absence (circles) of reproduction by maturing juveniles, and the presence (open symbols) or absence (filled symbols)  of adult survival included in the fertility coefficient.  The correct model is the open square with the AAS maturation model.', fig.height=3}
 # Figure of lionfish lambdas
 library(ggplot2)
-ggplot(lf, aes(x = MatMod, y = Lambda)) +
+ggplot(alldata, aes(x = MatMod, y = Lambda)) +
   geom_point(aes(shape = JuvRep, fill = FertSurv), size = 4) + 
   scale_shape_manual(values = 21:22) +
   scale_fill_manual(values = c("black", "white")) +
   theme_classic() + theme(legend.position = "none") +
   ylab(expression(paste("Aymptotic growth rate (", lambda[1], ")"))) + 
-  xlab("Maturation model") + ylim(1, NA)
+  xlab("Maturation model") + #ylim(1, NA) +
+  facet_wrap("Population", scales = "free")
 ```
 
-```{r lflamtab, results='markup', echo=FALSE}
+```{r lflamtab, results='markup', echo=FALSE, eval=FALSE}
 # "anova" table of lambdas
 lambda_stats <- function(st) {
   lambda <- filter(st, MatMod == "AAS" & FertSurv & JuvRep)$Lambda
