--- a/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
+++ b/docs/MPM_errors_manuscript/MPM_errors_manuscript.Rmd
@@ -570,6 +570,63 @@ In particular, the asymptotic population growth rate was substantially overestim
 On the other hand, SAS models overestimated $\lambda_1$ when $\lambda_1>1$ (lionfish and Southern population of American alligator) compared with AAS models, but it underestimated when $\lambda_1<1$ (Northern population of American alligator).
 In general, the SAS model magnifies the deviation in asymptotic population growth rate from 1, as predicted by the theory above. 
 
+## Effects of errors on sensitivity and elasticity analysis
+A common goal of constructing a matrix population model is to examine the sensitivity or elasticity of $\lambda_1$ to underlying demographic parameters, often in the service of informing population management or understanding life history evolution.
+Predicting the effects of MPM construction errors on these quantites requires information about the second derivative of $\lambda_1$ with respect to model parameters [@Caswell1996], the theory of which seems to only have been developed for Lefkovitch models. 
+In a Lefkovitch model, the second derivative of $\lambda_1$ with respect to diagonal matrix elements is positive, and with respect to off-diagonal elements seems to be generally negative [@McCarthy2008]. 
+This suggests that overestimates of the maturation rate should reduce the sensitivity of $\lambda_1$ to both stasis and growth terms, thus reducing the overall sensitivity of $\lambda_1$ to survival. 
+In addition, failing to include survival terms in the fertility coefficients will necessarily lead to underestimates of the sensitivity (and elasticity) of $\lambda_1$ to survival.
+
+To look at the specific effects on elasticities to particular parameters, we calculated the elasticities of $\lambda_1$ to stage-specific survival across the same suite of error combinations as we did for $\lambda_1$.
+For the lionfish population, the choice of maturation model had a substantial impact on the eslasticity of $\lambda_1$ to juvenile survival, and the rank order of elasticities to juvenile and adult survival was reversed by the FAS model (Fig. \@ref(fig:lfelasfig)a).
+The impacts of of errors in the fertility coefficents had a very modest impact on elasticities \@ref(fig:lfelasfig)a).
+In contrast, the elasticities of $\lambda_1$ to stage-specific survival in the alligator populations were nearly unaffected by any of the matrix construction errors (results not shown).
+
+
+```{r lfelasfig, fig.height=3, fig.cap='Effects of MPM construction errors on the elasticity of $\\lambda_1$ to stage-specific survival in the lionfish model. (a) Contrasts among the three maturation models, using correct values for the fertility coefficients. (b) Contrasts between approaches to fertility coefficient constructon, using the (correct) AAS maturation model.'}
+# Figure of lionfish elasticities
+# reshape the data
+library(reshape2)
+lf2 <- melt(lf, c("MatMod", "FertSurv", "JuvRep"), 
+            c("Elasticity_1", "Elasticity_2", "Elasticity_3"),
+            "Stage", value.name = "Elasticity")
+levels(lf2$Stage) <- c("Larvae", "Juveniles", "Adults")
+
+# Contrast maturation models
+p1 <- ggplot(subset(lf2, FertSurv & JuvRep),
+       aes(x = Stage, y = Elasticity)) +
+  geom_point(aes(shape = MatMod), size = 4) +
+  geom_line(aes(group = MatMod)) +
+  theme_classic() +
+  theme(legend.position = c(0.85, 0.25)) +
+  labs(shape = "Maturation") +
+  ylab("") + xlab("")
+
+# Contrast fertility coefficients
+fert_names <- c("correct",
+                "delayed maturation",
+                "delayed mat. & missing survival")
+lf2 <- mutate(lf2,
+              fert_index = 1+ (!FertSurv) * (!JuvRep) + !JuvRep,
+              Fertility = fert_names[fert_index])
+
+p2 <- ggplot(subset(lf2, MatMod == "AAS"),
+       aes(x = Stage, y = Elasticity)) +
+  geom_point(aes(shape = Fertility), size = 4) +
+  geom_line(aes(group = Fertility)) +
+  theme_classic()+
+  theme(legend.position = c(0.6, 0.5)) +
+  labs(shape = "Fertility Coefficient") +
+  ylab("")+ xlab("")
+
+library(ggpubr)
+
+pp <- ggarrange(p1, p2, ncol = 2, nrow = 1, labels = "auto", label.x = 0.95)
+# THere seems to be no way to use plotmath with annotate_figure
+annotate_figure(pp, left = "Elasticity of asymptotic growth rate \n to stage-specific survival", bottom = "Stage")
+```
+
+
 ## Effects of errors on other endpoints
 As described above, the three common errors in constructing matrix population models can affect the population growth rate.
 However, calculating other endpoints such as stable stage distribution, reproductive value, sensitivity, elasticity, generation time, and damping ratio are often the primary goal of constructing an MPM, especially for management applications or studies of life history theory. 
@@ -593,56 +650,6 @@ The effects of using different maturation models can be observed by comparing th
 Although the stable stage distributions of adults under the four models appear similar (Fig. A.2), the juvenile proportion in the stable stage distributions were underestimated with the FAS and SAS models compared with the age structured models (Fig. A.2).
 The reproductive value of adults were substantially underestimated with the FAS and SAS models compared with the AAS or age-structured models.
 
-Because the sensitivity and elasticity of the population growth rates to population parameters are functions of these basic statistics, they are also affected by the errors. 
-Predicting the effects of MPM construction errors requires information about the second derivative of $\lambda_1$ with respect to model parameters [@Caswell1996], the theory of which seems not to have been much developed. 
-In a Lefkovitch model, the second derivative of $\lambda_1$ with respect to diagonal matrix elements is positive, and with respect to off-diagonal elements seems to be generally negative [@McCarthy2008]. 
-This suggests that overestimates of the maturation rate should reduce the sensitivity of $\lambda_1$ to both stasis and growth terms, thus reducing the overall sensitivity of $\lambda_1$ to survival. 
-In addition, failing to include survival terms in the fertility coefficients will necessarily lead to underestimates of the sensitivity (and elasticity) of $\lambda_1$ to survival.
-For lionfish population, the rank order of both sensitivity and elasticity among stages changed as we changed the way we calculate the transition rates (Fig. \@ref(fig:lfelasfig)).
-This implies that conservation strategy can be affected by the errors in developing a population matrix.   
-
-```{r lfelasfig, fig.asp=1, fig.cap='Effects of MPM construction errors on the elasticity of $\\lambda_1$ to stage-specific survival in the lionfish model. (a) Contrasts among the three maturation models, using correct values for the fertility coefficients. (b) Contrasts between approaches to fertility coefficient constructon, using the (correct) AAS maturation model.'}
-# Figure of lionfish elasticities
-# reshape the data
-library(reshape2)
-lf2 <- melt(lf, c("MatMod", "FertSurv", "JuvRep"), 
-            c("Elasticity_1", "Elasticity_2", "Elasticity_3"),
-            "Stage", value.name = "Elasticity")
-levels(lf2$Stage) <- c("Larvae", "Juveniles", "Adults")
-
-# Contrast maturation models
-p1 <- ggplot(subset(lf2, FertSurv & JuvRep),
-       aes(x = Stage, y = Elasticity)) +
-  geom_point(aes(shape = MatMod), size = 4) +
-  geom_line(aes(group = MatMod)) +
-  theme_classic() +
-  theme(legend.position = c(0.8, 0.3)) +
-  labs(shape = "Maturation Model") +
-  ylab("") + xlab("")
-
-# Contrast fertility coefficients
-fert_names <- c("correct",
-                "delayed maturation",
-                "delayed maturation and missing survival")
-lf2 <- mutate(lf2,
-              fert_index = 1+ (!FertSurv) * (!JuvRep) + !JuvRep,
-              Fertility = fert_names[fert_index])
-
-p2 <- ggplot(subset(lf2, MatMod == "AAS"),
-       aes(x = Stage, y = Elasticity)) +
-  geom_point(aes(shape = Fertility), size = 4) +
-  geom_line(aes(group = Fertility)) +
-  theme_classic()+
-  theme(legend.position = c(0.7, 0.3)) +
-  labs(shape = "Fertility Coefficient") +
-  ylab("")
-
-library(ggpubr)
-
-pp <- ggarrange(p1, p2, ncol = 1, nrow = 2, labels = "auto", label.x = 0.95)
-# THere seems to be no way to use plotmath with annotate_figure
-annotate_figure(pp, left = "Elasticity of asymptotic growth rate to stage-specific survival")
-```
 
 There are a variety of ways to define generation time in demographic studies [@Coale1972]. 
 In this study, we used the mean age of mothers to represent the generation time, applying formulas developed by @Bienvenu2015, which is a function of elasticity and fertility coefficients. 
